--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -74,6 +74,12 @@ jobs:
           prerelease: false
 
       - name: Publish to npm
+        if: steps.check_release.outputs.exists == 'false'
         run: |
             echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > .npmrc
-            npm publish    
+            npm publish
+
+      - name: Apply branch protection
+        run: node repo-rules.js
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
